* commit ad5e46baf87626f49e0db7b196f9f3182b5c3fbd
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Jun 27 13:49:58 2015 -0400
| 
|     small changes in cleandist-custom and remake bash scripts.
|  
* commit 2e7a55947ca01f39ff936faf1d43b155b53551d4
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Jun 26 17:12:54 2015 -0400
| 
|     Disabled maintainer mode; this hopefully should work...
|  
* commit 9ac3e8884684d7d4f7afa6dc5398fd3e5c27aeef
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Jun 26 16:55:07 2015 -0400
| 
|     this is just random attempts to make things installable by simply cloning the repository
|  
* commit 6e79852b1dbae495724bdca97895dbd5a929d736
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Thu Jun 25 13:46:01 2015 -0400
| 
|     Added some more information to the README file(s)
|  
* commit c6290420cefeef15e7e78d2528a5a1ac452f6973
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Thu Jun 25 11:23:02 2015 -0400
| 
|     Cleaned up some python scripts (still more to do on that front), and edited the Qext calculation in the spheres module; S(theta) had the wrong sign and the calculation of beta wasn't careful when it came to quadrants; this accounts for the odd 'sgnfac' variable that we had before. That has gone away.
|  
* commit 05927183778638e73c48f0271dae886df69c0379
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jun 9 22:02:03 2015 +0300
| 
|     Mathjax update; documentation now renders math (assuming you're connected to the internetz). Fixed a couple of small inconsistencies -- spherical module now just outputs theta, dQ/dOm instead of the 2d grid (and will do the full grid if you specify --do-full-2d-fft). Theta now runs from 0 to max_angle.
|  
* commit 1fd3e5b2786a01b612dac7b4f0ebcaf6601d75f4
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Jun 8 17:06:52 2015 +0300
| 
|     Documentation update; added aclocal.m4; added line to .defaults
|  