@@ -1,3 +1,9 @@
+* commit b88f93447ca96959d0ec124574e122f8a79259f2
+| Author: John Hoffman <jah5@princeton.edu>
+| Date:   Sat Jun 27 17:28:37 2015 -0400
+| 
+|     Added a (1-1/ngrid) fudge factor to thetax,thetaz arrays; this aligns the numerical dQdOm with the analytical one. Maybe there's a bug that explain why this works so well?
+|  
 * commit ad5e46baf87626f49e0db7b196f9f3182b5c3fbd
 | Author: John Hoffman <jah5@princeton.edu>
 | Date:   Sat Jun 27 13:49:58 2015 -0400
